opam-version: "2.0"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net>"
homepage: "https://github.com/Leonidas-from-XIV/ore-wa"
dev-repo: "git+http://github.com/Leonidas-from-XIV/ore-wa.git"
bug-reports: "https://github.com/Leonidas-from-XIV/ore-wa/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "async" {>= "v0.11" & < "v0.12"}
  "core" {>= "v0.11" & < "v0.12"}
  "dune" {build & >= "1.4"}
  "ocamlformat" {build}
]
synopsis: "Modern Redis client"
