opam-version: "2.0"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net>"
homepage: "https://github.com/Leonidas-from-XIV/orewa"
dev-repo: "git+https://github.com/Leonidas-from-XIV/orewa.git"
bug-reports: "https://github.com/Leonidas-from-XIV/orewa/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "async" {>= "v0.11" & < "v0.12"}
  "core" {>= "v0.11" & < "v0.12"}
  "dune" {build & >= "1.4"}
  "ocamlformat" {build}
  "ppx_let" {build & >= "v0.11" & < "v0.12"}
  "alcotest" {with-test & >= "0.8.4" & < "0.9.0"}
  "alcotest-async" {with-test & >= "0.8.2" & < "0.9.0"}
  "ppx_deriving" {>= "4.2" & < "5.0"}
]
synopsis: "Async-friendly Redis client"
